FAC-207: Refactor validation of calculated assessment result